@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020180429"
-#define public MagickPackageReleaseDate "snapshot-20180429"
+#define public MagickPackageVersionAddendum ".020180430"
+#define public MagickPackageReleaseDate "snapshot-20180430"
