@@ -1,3 +1,11 @@
+2018-04-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* coders/pcx.c (ReadPCXImage): Colormap from PCX header is only
+	used if colors <= 16. Determination of DirectClass image was
+	wrong.  Fixes oss-fuzz 8093 "graphicsmagick/coder_PCX_fuzzer:
+	Use-of-uninitialized-value in IsMonochromeImage". (Credit to
+	OSS-Fuzz)
+
 2018-04-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* version.sh: Updates to prepare for the 1.3.29 release.
